// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeStack -> Search Screen should renders correctly by default with the keyboard open 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F9F6EB",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 1,
            },
            undefined,
          ]
        }
      >
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": 30,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="left"
                x1="1"
                x2="0"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "left",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-60}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": 30,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="right"
                x1="0"
                x2="1"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "right",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-60}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 30,
                "position": "absolute",
                "top": "100%",
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="bottom"
                x1="0"
                x2="0"
                y1="0"
                y2="1"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "bottom",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-60}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 30,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="top"
                x1="0"
                x2="0"
                y1="1"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "top",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-60}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={32}
                cy={32}
                fx={32}
                fy={32}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topLeft"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,32 a32,32 0 0 1 32 -32 v2 v30 h-30 h-2 Z"
              fill={
                Array [
                  1,
                  "topLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "translateX": -30,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={32}
                fx={0}
                fy={32}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topRight"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,0 a32,32 0 0 1 32,32 h-2 h-30 v-30 v-2 Z"
              fill={
                Array [
                  1,
                  "topRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateY": -30,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={32}
                cy={0}
                fx={32}
                fy={0}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomLeft"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M32,32 a32,32 0 0 1 -32,-32 h2 h30 v30 v2 Z"
              fill={
                Array [
                  1,
                  "bottomLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateX": -30,
                  },
                  Object {
                    "translateY": -30,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomRight"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M32,0 a32,32 0 0 1 -32,32 v-2 v-30 h30 h2 Z"
              fill={
                Array [
                  1,
                  "bottomRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth="100%"
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "position": "absolute",
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGMask
                height="100%"
                maskContentUnits={1}
                maskTransform={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                maskUnits={0}
                name="maskPaintBelow"
                width="100%"
                x="0%"
                y="0%"
              >
                <RNSVGRect
                  fill={4294967295}
                  height="100%"
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width="100%"
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -30,
                      0,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x="100%"
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      -30,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x={0}
                  y="100%"
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -30,
                      -30,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x="100%"
                  y="100%"
                />
              </RNSVGMask>
            </RNSVGDefs>
            <RNSVGRect
              fill={4278190080}
              fillOpacity={0.08}
              height="100%"
              mask="maskPaintBelow"
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        onLayout={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 10,
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
                "paddingLeft": 18,
                "paddingRight": 20,
                "width": "100%",
              },
              Object {
                "borderRadius": 30,
              },
            ]
          }
        >
          <TextInput
            editable={true}
            onChangeText={[Function]}
            placeholder="ابحث عن مطعم..."
            placeholderTextColor="#C4C4C4"
            style={
              Object {
                "color": "#000",
                "flex": 1,
                "fontFamily": "Cairo-Regular",
                "textAlign": "right",
              }
            }
            value=""
          />
        </View>
      </View>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 10,
          "width": 30,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "padding": 20,
      }
    }
  />
</View>
`;

exports[`HomeStack -> Search Screen should show a list of restaurants when searching 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F9F6EB",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 1,
            },
            undefined,
          ]
        }
      >
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": 30,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="left"
                x1="1"
                x2="0"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "left",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-60}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": 30,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="right"
                x1="0"
                x2="1"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "right",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-60}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 30,
                "position": "absolute",
                "top": "100%",
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="bottom"
                x1="0"
                x2="0"
                y1="0"
                y2="1"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "bottom",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-60}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 30,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="top"
                x1="0"
                x2="0"
                y1="1"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "top",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-60}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={32}
                cy={32}
                fx={32}
                fy={32}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topLeft"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,32 a32,32 0 0 1 32 -32 v2 v30 h-30 h-2 Z"
              fill={
                Array [
                  1,
                  "topLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "translateX": -30,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={32}
                fx={0}
                fy={32}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topRight"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,0 a32,32 0 0 1 32,32 h-2 h-30 v-30 v-2 Z"
              fill={
                Array [
                  1,
                  "topRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateY": -30,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={32}
                cy={0}
                fx={32}
                fy={0}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomLeft"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M32,32 a32,32 0 0 1 -32,-32 h2 h30 v30 v2 Z"
              fill={
                Array [
                  1,
                  "bottomLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateX": -30,
                  },
                  Object {
                    "translateY": -30,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomRight"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M32,0 a32,32 0 0 1 -32,32 v-2 v-30 h30 h2 Z"
              fill={
                Array [
                  1,
                  "bottomRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth="100%"
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "position": "absolute",
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGMask
                height="100%"
                maskContentUnits={1}
                maskTransform={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                maskUnits={0}
                name="maskPaintBelow"
                width="100%"
                x="0%"
                y="0%"
              >
                <RNSVGRect
                  fill={4294967295}
                  height="100%"
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width="100%"
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -30,
                      0,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x="100%"
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      -30,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x={0}
                  y="100%"
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -30,
                      -30,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x="100%"
                  y="100%"
                />
              </RNSVGMask>
            </RNSVGDefs>
            <RNSVGRect
              fill={4278190080}
              fillOpacity={0.08}
              height="100%"
              mask="maskPaintBelow"
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        onLayout={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 10,
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
                "paddingLeft": 18,
                "paddingRight": 20,
                "width": "100%",
              },
              Object {
                "borderRadius": 30,
              },
            ]
          }
        >
          <TextInput
            editable={true}
            onChangeText={[Function]}
            placeholder="ابحث عن مطعم..."
            placeholderTextColor="#C4C4C4"
            style={
              Object {
                "color": "#000",
                "flex": 1,
                "fontFamily": "Cairo-Regular",
                "textAlign": "right",
              }
            }
            value="restaurant"
          />
        </View>
      </View>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 10,
          "width": 30,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "padding": 20,
      }
    }
  >
    <RCTScrollView
      data={
        Array [
          Object {
            "locationCoords": Object {
              "latitude": 37.421083,
              "longitude": -122.104,
            },
            "locationName": "الحراش وسط",
            "name": "اسم المطعم",
            "ownerId": "",
            "pictures": Array [
              "https://webgrowhub.com/wp-content/uploads/2020/12/photo-1552566626-52f8b828add9.jpg",
              "https://webgrowhub.com/wp-content/uploads/2020/12/photo-1552566626-52f8b828add9.jpg",
            ],
            "restaurantId": "0",
            "workingTime": Object {
              "closing": Object {
                "hour": 21,
                "minute": 0,
              },
              "opening": Object {
                "hour": 20,
                "minute": 0,
              },
            },
          },
          Object {
            "locationCoords": Object {
              "latitude": 37.421083,
              "longitude": -122.104,
            },
            "locationName": "الحراش وسط",
            "name": "اسم المطعم",
            "ownerId": "",
            "pictures": Array [
              "https://webgrowhub.com/wp-content/uploads/2020/12/photo-1552566626-52f8b828add9.jpg",
              "https://webgrowhub.com/wp-content/uploads/2020/12/photo-1552566626-52f8b828add9.jpg",
            ],
            "restaurantId": "1",
            "workingTime": Object {
              "closing": Object {
                "hour": 21,
                "minute": 0,
              },
              "opening": Object {
                "hour": 20,
                "minute": 0,
              },
            },
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      viewabilityConfigCallbackPairs={Array []}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "marginBottom": 10,
                "marginTop": 5,
                "opacity": 1,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 10,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#7C4908",
                      "fontFamily": "Cairo-Bold",
                      "fontSize": 20,
                    },
                    undefined,
                  ]
                }
              >
                اسم المطعم
              </Text>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginTop": -5,
                    "width": "100%",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#7C4908",
                        "fontFamily": "Cairo-Regular",
                        "fontSize": 16,
                        "textAlign": "right",
                      },
                      undefined,
                    ]
                  }
                >
                  الحراش وسط
                </Text>
                <View
                  style={
                    Object {
                      "marginLeft": 5,
                      "width": 20,
                    }
                  }
                >
                  <Image
                    resizeMode="contain"
                    source={
                      Object {
                        "process": [Function],
                      }
                    }
                    style={
                      Object {
                        "width": "70%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 70,
                  "justifyContent": "center",
                  "width": 70,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://webgrowhub.com/wp-content/uploads/2020/12/photo-1552566626-52f8b828add9.jpg",
                  }
                }
                style={
                  Object {
                    "borderRadius": 10,
                    "height": "100%",
                    "width": "100%",
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "marginBottom": 10,
                "marginTop": 5,
                "opacity": 1,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 10,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#7C4908",
                      "fontFamily": "Cairo-Bold",
                      "fontSize": 20,
                    },
                    undefined,
                  ]
                }
              >
                اسم المطعم
              </Text>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginTop": -5,
                    "width": "100%",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#7C4908",
                        "fontFamily": "Cairo-Regular",
                        "fontSize": 16,
                        "textAlign": "right",
                      },
                      undefined,
                    ]
                  }
                >
                  الحراش وسط
                </Text>
                <View
                  style={
                    Object {
                      "marginLeft": 5,
                      "width": 20,
                    }
                  }
                >
                  <Image
                    resizeMode="contain"
                    source={
                      Object {
                        "process": [Function],
                      }
                    }
                    style={
                      Object {
                        "width": "70%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 70,
                  "justifyContent": "center",
                  "width": 70,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://webgrowhub.com/wp-content/uploads/2020/12/photo-1552566626-52f8b828add9.jpg",
                  }
                }
                style={
                  Object {
                    "borderRadius": 10,
                    "height": "100%",
                    "width": "100%",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`HomeStack -> Search Screen should show a not found message when nothing returned from the search 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F9F6EB",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 1,
            },
            undefined,
          ]
        }
      >
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": 30,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="left"
                x1="1"
                x2="0"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "left",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-60}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": 30,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="right"
                x1="0"
                x2="1"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "right",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-60}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 30,
                "position": "absolute",
                "top": "100%",
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="bottom"
                x1="0"
                x2="0"
                y1="0"
                y2="1"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "bottom",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-60}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 30,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="top"
                x1="0"
                x2="0"
                y1="1"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "top",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-60}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={32}
                cy={32}
                fx={32}
                fy={32}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topLeft"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,32 a32,32 0 0 1 32 -32 v2 v30 h-30 h-2 Z"
              fill={
                Array [
                  1,
                  "topLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "translateX": -30,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={32}
                fx={0}
                fy={32}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topRight"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,0 a32,32 0 0 1 32,32 h-2 h-30 v-30 v-2 Z"
              fill={
                Array [
                  1,
                  "topRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateY": -30,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={32}
                cy={0}
                fx={32}
                fy={0}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomLeft"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M32,32 a32,32 0 0 1 -32,-32 h2 h30 v30 v2 Z"
              fill={
                Array [
                  1,
                  "bottomLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={33}
          bbWidth={33}
          focusable={false}
          height={33}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateX": -30,
                  },
                  Object {
                    "translateY": -30,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 33,
                "width": 33,
              },
            ]
          }
          width={33}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  Array [
                    0.9375,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomRight"
                rx={32}
                ry={32}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M32,0 a32,32 0 0 1 -32,32 v-2 v-30 h30 h2 Z"
              fill={
                Array [
                  1,
                  "bottomRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth="100%"
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "position": "absolute",
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGMask
                height="100%"
                maskContentUnits={1}
                maskTransform={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                maskUnits={0}
                name="maskPaintBelow"
                width="100%"
                x="0%"
                y="0%"
              >
                <RNSVGRect
                  fill={4294967295}
                  height="100%"
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width="100%"
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -30,
                      0,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x="100%"
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      -30,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x={0}
                  y="100%"
                />
                <RNSVGRect
                  fill={4278190080}
                  height={30}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -30,
                      -30,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={30}
                  x="100%"
                  y="100%"
                />
              </RNSVGMask>
            </RNSVGDefs>
            <RNSVGRect
              fill={4278190080}
              fillOpacity={0.08}
              height="100%"
              mask="maskPaintBelow"
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        onLayout={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 10,
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
                "paddingLeft": 18,
                "paddingRight": 20,
                "width": "100%",
              },
              Object {
                "borderRadius": 30,
              },
            ]
          }
        >
          <TextInput
            editable={true}
            onChangeText={[Function]}
            placeholder="ابحث عن مطعم..."
            placeholderTextColor="#C4C4C4"
            style={
              Object {
                "color": "#000",
                "flex": 1,
                "fontFamily": "Cairo-Regular",
                "textAlign": "right",
              }
            }
            value="restaurant"
          />
        </View>
      </View>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 10,
          "width": 30,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "padding": 20,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#7C4908",
            "fontFamily": "Cairo-Regular",
            "fontSize": 16,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      لا يوجد مطعم بهذا الاسم
    </Text>
  </View>
</View>
`;
